--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,79 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.pill{
+  border-radius:1.25rem !important;
+}
+.btn-prime{
+  /* background-image: linear-gradient( to right bottom, blue, grey); */
+  background: #0575E6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+padding: 5px 7px;
+border-radius: 100%;
+color: #dedede;
+box-shadow: 0 0 black;
+box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+}
+.btn-prime:hover{
+
+}
+.btn-icon{
+  border-radius:100%;
+  border: 1px solid  #021B79;
+  padding: 5px 7px;
+}
+.btn-icon{
+  border-radius:100%;
+  border: 1px solid  #021B79;
+  padding: 1px 2px;
+}
+.btn-icon:hover{
+  color:white;
+  background-color:#021B79;
+}
+.btn-round{
+  background-color: #0575E6;;
+  border-radius:100%;
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.position-relative{
+  position:relative;
+}
+.sidebar {
+  background-color:white;
+  position: fixed;
+  top: 3rem;
+  bottom: 0;
+  right: 0;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  padding-bottom:10rem;
+}
+.cart-sidebar-expanded .sidebar-cards,
+.cart-sidebar-expanded .cart-sidebar-summary
+{
+  width:20rem;
+}
+.sidebar-cards {
+  width:6rem;
+}
+.cart-sidebar-summary{
+  position:fixed;
+  bottom: 10px;
+  width:6rem;
+
+}
+.nav-sticky{
+  position:fixed;
+  top:0;
+  right:0;
+  left:0;
+  z-index:1;
+}
