--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,10 @@ box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.04
   width:6rem;
 
 }
+.cart-img{
+  width:60px;
+  height:60px;
+}
 .nav-sticky{
   position:fixed;
   top:0;
